cm4all-workshop (4.0.4) unstable; urgency=low

  * fix shutdown hang when database is unreachable
  * log deprecation warning if /etc/default/cm4all-workshop is configured
  * debian: remove the deprecated .default file
  * debian: use debhelper 12

 --   

cm4all-workshop (4.0.3) unstable; urgency=low

  * merge release 3.4

 -- Max Kellermann <mk@cm4all.com>  Fri, 18 Jan 2019 14:48:41 +0100

cm4all-workshop (4.0.2) unstable; urgency=low

  * cron: fix bogus error "malformed MOUNT_UTS_NAMESPACE packet"
  * spawn: configurable resource limits CPUWeight, TasksMax, MemoryMax

 -- Max Kellermann <mk@cm4all.com>  Mon, 17 Dec 2018 19:28:34 +0100

cm4all-workshop (4.0.1) unstable; urgency=low

  * require PostgreSQL 9.6 or later
  * fix "std::bad_alloc" error after database connection loss
  * workshop: add column `time_started`
  * workshop: add rate limits

 -- Max Kellermann <mk@cm4all.com>  Tue, 13 Nov 2018 13:24:25 +0100

cm4all-workshop (3.4) unstable; urgency=low

  * workshop: fix crash bug in control channel receiver

 -- Max Kellermann <mk@cm4all.com>  Fri, 04 Jan 2019 17:09:00 +0100

cm4all-workshop (3.3) unstable; urgency=low

  * workshop: fix race condition in control channel after process exit

 -- Max Kellermann <mk@cm4all.com>  Thu, 08 Nov 2018 14:54:15 +0100

cm4all-workshop (3.2) unstable; urgency=low

  * workshop: fill `log` column after `again`

 -- Max Kellermann <mk@cm4all.com>  Thu, 25 Oct 2018 20:02:04 +0200

cm4all-workshop (3.1) unstable; urgency=low

  * feature freeze
  * cron: log more context for "No uid/gid specified"

 -- Max Kellermann <mk@cm4all.com>  Fri, 19 Oct 2018 18:30:16 +0200

cm4all-workshop (3.0.6) unstable; urgency=low

  * cron: fix error "std::bad_alloc" due to uninitialized variable
  * cron: fix warning "... died from signal 31"

 -- Max Kellermann <mk@cm4all.com>  Mon, 15 Oct 2018 17:02:09 +0200

cm4all-workshop (3.0.5) unstable; urgency=low

  * cron: fix assertion failure
  * cron: fix stack-use-after-scope
