@@ -3,6 +3,7 @@ cm4all-workshop (4.0.4) unstable; urgency=low
   * fix shutdown hang when database is unreachable
   * log deprecation warning if /etc/default/cm4all-workshop is configured
   * debian: remove the deprecated .default file
+  * debian: revoke world-read permissions from workshop.conf
   * debian: use debhelper 12
 
  --   
